--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,34 +1,52 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
-# Controls when the action will run. This runs every 6 hours.
+# Controls when the action will run.
 on:
   schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
+      # every 12 hours
+    - cron: "0 */12 * * *"
 
-# This runs the action on workflow dispatch (manual trigger)
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
+  
+  # Also run on every push on the master branch
+  push:
+    branches:
+    - main
 
-# The sequence of jobs to be run.
+# The sequence of runs in this workflow:
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks out a copy of your repository so the workflow can access it.
-      - name: Checkout Repository
+      - name: Clone repo
         uses: actions/checkout@v3
-
-      # Generates the snake animation and saves it as a SVG file
-      - name: Generate Snake
-        uses: Platane/snk@v2
+    
+      - name: Generate the snake files in './dist/'
+        uses: Platane/snk@v3
+        id: snake-gif
         with:
-          github_user_name: DiegoooRL
-          outputs: dist/snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+        env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Upload the SVG to the output branch
-      - name: Upload Snake
-        uses: ad-m/github-push-action@v0.6.0
+      - name: Show build status
+        run: git status
+
+      - name: Push new files to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          branch: output
-          file: dist/snake.svg
+          target_branch: output
+          build_dir: dist
+          commit_message: Update snake animations
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
