--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -3,10 +3,10 @@ name: Generate Snake
 on:
   schedule:
     - cron: "0 */12 * * *"  # Runs every 12 hours
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual trigger
   push:
     branches:
-      - main
+      - main  # Run the workflow on push to main branch
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Updated to the latest version
 
       - name: Generate Snake
         uses: Platane/snk@v3
@@ -22,16 +22,24 @@ jobs:
           github_user_name: DiegoooRL  # Replace with your GitHub username
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push new files to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Setup Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit and Push
+        run: |
+          git add dist/github-contribution-grid-snake.svg
+          git commit -m "Generate snake contribution graph"
+          git push origin output  # Ensure the branch exists or is created
+
+    - name: Push to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v4  # Updated to the latest version
         with:
           target_branch: output
           build_dir: dist
-          commit_message: Update snake animations
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
