--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -1,6 +1,5 @@
 name: Generate Snake
 
-# The `on` section defines the events that will trigger the workflow.
 on:
   schedule:
     - cron: "0 */12 * * *"  # Triggers the workflow every 12 hours
@@ -34,5 +33,5 @@ jobs:
       - name: Commit and Push
         run: |
           git add dist/github-contribution-grid-snake.svg
-          git commit -m "Generate snake contribution graph"
-          git push origin main  # Pushes to the main branch
+          git commit -m "Generate snake contribution graph" || echo "No changes to commit"
+          git push origin main --force  # Force pushes to the main branch
